improved bottom nav

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,30 +2,30 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/buttom_nav_navigation"
-    app:startDestination="@id/fragment_home">
+    android:id="@+id/bottom_nav_navigation"
+    app:startDestination="@id/home">
 
     <fragment
-        android:id="@+id/fragment_home"
-        android:name="co.develhope.meteoapp.Home"
+        android:id="@+id/home"
+        android:name="co.develhope.meteoapp.features.home.Home"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/fragment_today"
-        android:name="co.develhope.meteoapp.Today"
+        android:id="@+id/today"
+        android:name="co.develhope.meteoapp.features.today.Today"
         android:label="fragment_today"
         tools:layout="@layout/fragment_today" />
 
     <fragment
-        android:id="@+id/fragment_tomorrow"
-        android:name="co.develhope.meteoapp.Tomorrow"
+        android:id="@+id/tomorrow"
+        android:name="co.develhope.meteoapp.features.tomorrow.Tomorrow"
         android:label="fragment_tomorrow"
         tools:layout="@layout/fragment_tomorrow" />
 
     <fragment
-        android:id="@+id/fragment_search"
-        android:name="co.develhope.meteoapp.Search"
+        android:id="@+id/search"
+        android:name="co.develhope.meteoapp.features.search.Search"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 
