--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,22 +6,22 @@
     tools:content="com.example.myApplication.MainActivity">
 
     <item
-        android:id="@+id/home_button"
+        android:id="@+id/home"
         android:title="@string/home_icon"
         android:icon="@drawable/home"
         />
     <item
-        android:id="@+id/today_button"
+        android:id="@+id/today"
         android:title="@string/today_icon"
         android:icon="@drawable/day"
         />
     <item
-        android:id="@+id/tomorrow_button"
+        android:id="@+id/tomorrow"
         android:title="@string/tomorrow_icon"
         android:icon="@drawable/day"
         />
     <item
-        android:id="@+id/search_button"
+        android:id="@+id/search"
         android:title="@string/search_icon"
         android:icon="@drawable/search"
         />
