--- a/app/src/main/res/layout/screen_today.xml
+++ b/app/src/main/res/layout/screen_today.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_200"
-    tools:context=".features.today.Today">
+    tools:context=".features.today.TodayScreen">
 
     <TextView
         android:layout_width="wrap_content"
