almost finished homescreen

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- android:theme="@style/AppTheme" serve a togliere la barrra in cima con il nome dell'app -->
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <!-- Disable the ActionBar -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!-- Base application theme. -->
+    </style>
     <style name="Theme.Meteoapp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
@@ -12,5 +18,26 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="oggi">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="some_id">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="home_font">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="prossimi_5_">
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0.07</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="city_name">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 </resources>
