--- a/app/src/main/res/layout/home_page_item.xml
+++ b/app/src/main/res/layout/home_page_item.xml
@@ -8,19 +8,19 @@
     android:layout_alignParentTop="true"
     android:background="@drawable/drawableframe10"
     android:elevation="4dp"
-    android:layout_marginBottom="5dp"
-    >
+    android:layout_marginBottom="5dp">
+
     <!-- Oggi -->
     <TextView
         android:id="@+id/day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/oggi"
+        android:text="@string/today"
         android:textAppearance="@style/oggi"
         android:gravity="top"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        />
+        android:layout_marginTop="18dp"/>
+
     <!-- 10/09 -->
     <TextView
         android:id="@+id/date"
@@ -28,10 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginStart="18dp"
-        android:text="@string/some_id2"
+        android:text="@string/sample_date"
         android:textAppearance="@style/some_id"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- 22 -->
     <TextView
         android:id="@+id/temp_min"
@@ -39,10 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="145dp"
         android:layout_marginTop="18dp"
-        android:text="@string/some_id"
+        android:text="@string/sample_min_temperature"
         android:textAppearance="@style/some_id"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- ° -->
     <TextView
         android:id="@+id/grade_min"
@@ -51,10 +51,9 @@
         android:text="@string/degrees_symbol"
         android:textAppearance="@style/some_id"
         android:layout_alignTop="@id/temp_min"
-        android:layout_toEndOf="@id/temp_min"
-        />
-    <!-- min -->
+        android:layout_toEndOf="@id/temp_min"/>
 
+    <!-- min -->
     <TextView
         android:id="@+id/min"
         android:layout_width="wrap_content"
@@ -63,8 +62,8 @@
         android:layout_marginTop="46dp"
         android:text="@string/min"
         android:textAppearance="@style/home_font"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- 31(°) -->
     <TextView
         android:id="@+id/temp_max"
@@ -72,10 +71,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="254dp"
         android:layout_marginTop="18dp"
-        android:text="@string/some_id3"
+        android:text="@string/sample_max_temperature"
         android:textAppearance="@style/some_id"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- ° -->
     <TextView
         android:id="@+id/grade_max"
@@ -84,8 +83,8 @@
         android:text="@string/degrees_symbol"
         android:textAppearance="@style/some_id"
         android:layout_alignTop="@id/temp_max"
-        android:layout_toEndOf="@id/temp_max"
-        />
+        android:layout_toEndOf="@id/temp_max"/>
+
     <!-- max -->
     <TextView
         android:id="@+id/max"
@@ -95,15 +94,15 @@
         android:layout_marginTop="46dp"
         android:text="@string/max"
         android:textAppearance="@style/home_font"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- sun -->
     <ImageView
         android:id="@+id/wc_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/wc_sun"
-        android:contentDescription="@string/weather_icon"
+        android:contentDescription="@string/sample_weather_icon"
         android:layout_marginStart="18dp"
         android:layout_marginTop="86dp"/>
 
@@ -114,10 +113,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         android:layout_marginStart="152dp"
-        android:text="@string/mm"
+        android:text="@string/sample_mm"
         android:textAppearance="@style/some_id"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- mm -->
     <TextView
         android:id="@+id/mm_rain"
@@ -126,8 +125,8 @@
         android:text="@string/mm_of_rain"
         android:textAppearance="@style/some_id"
         android:layout_alignTop="@id/mm"
-        android:layout_toEndOf="@id/mm"
-        />
+        android:layout_toEndOf="@id/mm"/>
+
     <!-- precip. -->
     <TextView
         android:id="@+id/precip_"
@@ -135,21 +134,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
         android:layout_marginStart="152dp"
-        android:text="@string/precip_"
+        android:text="@string/rainfall"
         android:textAppearance="@style/home_font"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- 12(kmh) -->
     <TextView
         android:id="@+id/wind"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="261dp"
         android:layout_marginTop="89dp"
-        android:text="@string/kmh_placeholder"
+        android:text="@string/sample_kmh_placeholder"
         android:textAppearance="@style/some_id"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
     <!-- kmh -->
     <TextView
         android:id="@+id/kmh"
@@ -158,8 +157,8 @@
         android:text="@string/kmh"
         android:textAppearance="@style/some_id"
         android:layout_alignTop="@id/wind"
-        android:layout_toEndOf="@id/wind"
-        />
+        android:layout_toEndOf="@id/wind"/>
+
     <!-- vento -->
     <TextView
         android:id="@+id/vento"
@@ -167,8 +166,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="117dp"
         android:layout_marginStart="261dp"
-        android:text="@string/vento"
+        android:text="@string/wind"
         android:textAppearance="@style/home_font"
-        android:gravity="top"
-        />
+        android:gravity="top"/>
+
 </RelativeLayout>
