--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    //colors for today screen
+    <color name="today_tomorrow_background">#EFEEFE</color>
+    <color name="blue_text">#230EA4</color>
+
+
+
 
 </resources>
