Tomorrow screen layout and recycler view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="today_tomorrow_background">#EFEEFE</color>
+    <color name="blue_text">#230EA4</color>
 
 
 </resources>
