--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -1,15 +1,308 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200"
-    tools:context=".features.tomorrow.TomorrowScreen">
+    android:orientation="vertical"
+    android:background="@color/today_tomorrow_background">
 
-    <TextView
+    <!--    title layout-->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="TOMORROW!" />
+        android:orientation="vertical"
+        android:layout_marginBottom="34dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp">
+        <TextView
+            android:id="@+id/today_titleCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/city"
+            android:textSize="16sp"
+            android:textColor="@color/blue_text"
+            android:fontFamily="@font/inter" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/today_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/today"
+            android:textSize="20sp"
+            android:textColor="@color/blue_text"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter" />
+
+        <TextView
+            android:id="@+id/today_titleDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/today_date"
+            android:textColor="@color/blue_text"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter" />
+    </LinearLayout>
+
+    <!--sereno-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="24dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sereno"
+            android:textSize="16sp"
+            android:textColor="@color/blue_text"
+            android:fontFamily="@font/inter"/>
+    </LinearLayout>
+
+    <!--now hour info-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:orientation="horizontal"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hour11"
+            android:textSize="16sp"
+            android:layout_marginEnd="40dp"
+            android:fontFamily="@font/inter"
+            android:textColor="@color/blue_text"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/sun"
+            android:layout_marginEnd="40dp"
+            android:contentDescription="@string/sun" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/grade_for_every_hours"
+            android:textSize="20sp"
+            android:layout_marginEnd="1dp"
+            android:fontFamily="@font/inter"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="°"
+            android:textSize="22sp"
+            android:layout_marginEnd="40dp"
+            android:fontFamily="@font/inter"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+
+        <ImageView
+            android:layout_width="27dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/drop"
+            android:src="@drawable/fluent_drop_16_filled" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter"
+            android:text="@string/humidity_for_every_hours"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter"
+            android:text="%"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+
+    </LinearLayout>
+
+    <!--card-->
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="213dp"
+        android:layout_marginVertical="24dp"
+        android:layout_marginHorizontal="24dp"
+        app:cardBackgroundColor="#F5F4FE"
+        android:elevation="20dp"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="10dp"
+        android:background="@color/black">
+        <TextView
+            android:id="@+id/today_cardPerceived"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="18dp"
+            android:text="@string/perceived"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardPerceivedVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="37dp"
+            android:text="@string/grade_perceived"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardUv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="198dp"
+            android:layout_marginTop="18dp"
+            android:text="@string/UV"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardUvVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="198dp"
+            android:layout_marginTop="37dp"
+            android:text="@string/card_UV"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vector_1"
+            android:layout_marginTop="72dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
+
+        <TextView
+            android:id="@+id/today_cardHumidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="84dp"
+            android:text="@string/humidity"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardHumidityVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="106dp"
+            android:text="@string/humidity_percentage"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardWind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="198dp"
+            android:layout_marginTop="84dp"
+            android:text="@string/wind"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardWindVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="198dp"
+            android:layout_marginTop="106dp"
+            android:text="@string/wind_speed"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vector_1"
+            android:layout_marginTop="142dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
+
+        <TextView
+            android:id="@+id/today_cardCoverage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="153dp"
+            android:text="@string/cover"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardCoverageVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="175dp"
+            android:layout_marginBottom="19dp"
+            android:text="@string/cover_percentage"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardRain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="198dp"
+            android:layout_marginTop="153dp"
+            android:text="@string/rain"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter"/>
+
+        <TextView
+            android:id="@+id/today_cardRainVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="198dp"
+            android:layout_marginTop="175dp"
+            android:text="@string/rain_cm"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/inter"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tomorrowRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        tools:listitem="@layout/item_tomorrow"
+        tools:itemCount="4"
+        />
+</LinearLayout>
