--- a/app/src/main/res/layout/item_today.xml
+++ b/app/src/main/res/layout/item_today.xml
@@ -3,11 +3,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="@dimen/dimens48dp"
     android:orientation="vertical">
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="46dp"
+            android:layout_height="@dimen/dimens46dp"
             android:orientation="horizontal"
             android:gravity="center_vertical">
                 <TextView
@@ -15,8 +15,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hour_for_every_hours"
-                    android:textSize="16sp"
-                    android:layout_marginEnd="40dp"
+                    android:textSize="@dimen/dimens16sp"
+                    android:layout_marginEnd="@dimen/dimens40dp"
                     android:fontFamily="@font/inter"
                     android:textColor="@color/blue_text"/>
 
@@ -25,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/sun"
-                    android:layout_marginEnd="40dp"
+                    android:layout_marginEnd="@dimen/dimens40dp"
                     android:contentDescription="@string/sun" />
 
                 <TextView
@@ -33,28 +33,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/grade_for_every_hours"
-                    android:textSize="20sp"
-                    android:layout_marginEnd="1dp"
-                    android:fontFamily="@font/inter"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/grade_symbol"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="°"
-                    android:textSize="22sp"
-                    android:layout_marginEnd="40dp"
+                    android:textSize="@dimen/dimens20sp"
+                    android:layout_marginEnd="@dimen/dimens40dp"
                     android:fontFamily="@font/inter"
                     android:textStyle="bold"
                     android:textColor="@color/black"/>
 
                 <ImageView
                     android:id="@+id/drop"
-                    android:layout_width="27dp"
+                    android:layout_width="@dimen/dimens27dp"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="@dimen/dimens8dp"
                     android:contentDescription="@string/drop"
                     android:src="@drawable/fluent_drop_16_filled" />
 
@@ -65,16 +54,7 @@
                     android:fontFamily="@font/inter"
                     android:text="@string/humidity_for_every_hours"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/humidity_percentage_symbol"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter"
-                    android:text="%"
-                    android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="@dimen/dimens20sp" />
 
         </LinearLayout>
 
