--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -11,15 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="34dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp">
+        android:layout_marginBottom="@dimen/dimens40dp"
+        android:layout_marginStart="@dimen/dimens24dp"
+        android:layout_marginTop="@dimen/dimens36dp">
         <TextView
             android:id="@+id/today_titleCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/city"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textColor="@color/blue_text"
             android:fontFamily="@font/inter" />
 
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/today"
-            android:textSize="20sp"
+            android:textSize="@dimen/dimens20sp"
             android:textColor="@color/blue_text"
             android:textStyle="bold"
             android:fontFamily="@font/inter" />
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:text="@string/today_date"
             android:textColor="@color/blue_text"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter" />
     </LinearLayout>
@@ -48,13 +48,12 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
-        android:layout_marginStart="24dp">
+        android:layout_marginStart="@dimen/dimens24dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sereno"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textColor="@color/blue_text"
             android:fontFamily="@font/inter"/>
     </LinearLayout>
@@ -62,17 +61,17 @@
     <!--now hour info-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp">
+        android:layout_marginStart="@dimen/dimens24dp"
+        android:layout_marginEnd="@dimen/dimens24dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hour11"
-            android:textSize="16sp"
-            android:layout_marginEnd="40dp"
+            android:textSize="@dimen/dimens16sp"
+            android:layout_marginEnd="@dimen/dimens40dp"
             android:fontFamily="@font/inter"
             android:textColor="@color/blue_text"/>
 
@@ -80,33 +79,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/sun"
-            android:layout_marginEnd="40dp"
+            android:layout_marginEnd="@dimen/dimens40dp"
             android:contentDescription="@string/sun" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/grade_for_every_hours"
-            android:textSize="20sp"
-            android:layout_marginEnd="1dp"
-            android:fontFamily="@font/inter"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="°"
-            android:textSize="22sp"
-            android:layout_marginEnd="40dp"
+            android:textSize="@dimen/dimens20sp"
+            android:layout_marginEnd="@dimen/dimens40dp"
             android:fontFamily="@font/inter"
             android:textStyle="bold"
             android:textColor="@color/black"/>
 
         <ImageView
-            android:layout_width="27dp"
+            android:layout_width="@dimen/dimens27dp"
             android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/dimens8dp"
             android:contentDescription="@string/drop"
             android:src="@drawable/fluent_drop_16_filled" />
 
@@ -116,15 +105,7 @@
             android:fontFamily="@font/inter"
             android:text="@string/humidity_for_every_hours"
             android:textColor="@color/black"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/inter"
-            android:text="%"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/dimens20sp" />
 
 
     </LinearLayout>
@@ -132,34 +113,34 @@
     <!--card-->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="213dp"
-        android:layout_marginVertical="24dp"
-        android:layout_marginHorizontal="24dp"
-        app:cardBackgroundColor="#F5F4FE"
-        android:elevation="20dp"
-        app:cardElevation="20dp"
-        app:cardCornerRadius="10dp"
+        android:layout_height="@dimen/dimens213dp"
+        android:layout_marginVertical="@dimen/dimens24dp"
+        android:layout_marginHorizontal="@dimen/dimens24dp"
+        app:cardBackgroundColor="@color/iceCardView"
+        android:elevation="@dimen/dimens24dp"
+        app:cardElevation="@dimen/dimens24dp"
+        app:cardCornerRadius="@dimen/dimens10dp"
         android:background="@color/black">
         <TextView
             android:id="@+id/today_cardPerceived"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginStart="@dimen/dimens18dp"
+            android:layout_marginTop="@dimen/dimens18dp"
             android:text="@string/perceived"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:fontFamily="@font/inter"/>
 
         <TextView
             android:id="@+id/today_cardPerceivedVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="37dp"
+            android:layout_marginStart="@dimen/dimens18dp"
+            android:layout_marginTop="@dimen/dimens36dp"
             android:text="@string/grade_perceived"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter"/>
 
@@ -167,22 +148,22 @@
             android:id="@+id/today_cardUv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="198dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginStart="@dimen/_dimens198dp"
+            android:layout_marginTop="@dimen/dimens18dp"
             android:text="@string/UV"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:fontFamily="@font/inter"/>
 
         <TextView
             android:id="@+id/today_cardUvVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="198dp"
-            android:layout_marginTop="37dp"
+            android:layout_marginStart="@dimen/_dimens198dp"
+            android:layout_marginTop="@dimen/dimens36dp"
             android:text="@string/card_UV"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter"/>
 
@@ -190,30 +171,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/vector_1"
-            android:layout_marginTop="72dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp" />
+            android:layout_marginTop="@dimen/dimens72dp"
+            android:layout_marginStart="@dimen/dimens20dp"
+            android:layout_marginEnd="@dimen/dimens20dp" />
 
         <TextView
             android:id="@+id/today_cardHumidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginStart="@dimen/dimens18dp"
+            android:layout_marginTop="@dimen/dimens84dp"
             android:text="@string/humidity"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:fontFamily="@font/inter"/>
 
         <TextView
             android:id="@+id/today_cardHumidityVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="106dp"
+            android:layout_marginStart="@dimen/dimens18dp"
+            android:layout_marginTop="@dimen/dimens106dp"
             android:text="@string/humidity_percentage"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter"/>
 
@@ -221,22 +202,22 @@
             android:id="@+id/today_cardWind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="198dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginStart="@dimen/_dimens198dp"
+            android:layout_marginTop="@dimen/dimens84dp"
             android:text="@string/wind"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:fontFamily="@font/inter"/>
 
         <TextView
             android:id="@+id/today_cardWindVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="198dp"
-            android:layout_marginTop="106dp"
+            android:layout_marginStart="@dimen/_dimens198dp"
+            android:layout_marginTop="@dimen/dimens106dp"
             android:text="@string/wind_speed"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter"/>
 
@@ -244,31 +225,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/vector_1"
-            android:layout_marginTop="142dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp" />
+            android:layout_marginTop="@dimen/dimens142dp"
+            android:layout_marginStart="@dimen/dimens20dp"
+            android:layout_marginEnd="@dimen/dimens20dp" />
 
         <TextView
             android:id="@+id/today_cardCoverage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="153dp"
+            android:layout_marginStart="@dimen/dimens18dp"
+            android:layout_marginTop="@dimen/dimens153dp"
             android:text="@string/cover"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:fontFamily="@font/inter"/>
 
         <TextView
             android:id="@+id/today_cardCoverageVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="175dp"
-            android:layout_marginBottom="19dp"
+            android:layout_marginStart="@dimen/dimens18dp"
+            android:layout_marginTop="@dimen/dimens175dp"
+            android:layout_marginBottom="@dimen/dimens18dp"
             android:text="@string/cover_percentage"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter"/>
 
@@ -276,22 +257,22 @@
             android:id="@+id/today_cardRain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="198dp"
-            android:layout_marginTop="153dp"
+            android:layout_marginStart="@dimen/_dimens198dp"
+            android:layout_marginTop="@dimen/dimens153dp"
             android:text="@string/rain"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:fontFamily="@font/inter"/>
 
         <TextView
             android:id="@+id/today_cardRainVal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="198dp"
-            android:layout_marginTop="175dp"
+            android:layout_marginStart="@dimen/_dimens198dp"
+            android:layout_marginTop="@dimen/dimens175dp"
             android:text="@string/rain_cm"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimens16sp"
             android:textStyle="bold"
             android:fontFamily="@font/inter"/>
     </androidx.cardview.widget.CardView>
@@ -300,8 +281,8 @@
         android:id="@+id/tomorrowRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="@dimen/dimens24dp"
+        android:layout_marginEnd="@dimen/dimens24dp"
         tools:listitem="@layout/item_tomorrow"
         tools:itemCount="4"
         />
