--- a/app/src/main/res/layout/screen_today.xml
+++ b/app/src/main/res/layout/screen_today.xml
@@ -94,6 +94,14 @@
             android:textColor="@color/black"
             android:textSize="@dimen/dimens20sp" />
 
+        <ImageView
+            android:id="@+id/arrow_cardView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/dimens10dp"/>
+
     </LinearLayout>
 
     <!--card-->
