--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -61,7 +61,7 @@
     <!--now hour info-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimens36dp"
         android:orientation="horizontal"
         android:layout_marginStart="@dimen/dimens24dp"
         android:layout_marginEnd="@dimen/dimens24dp">
@@ -73,14 +73,16 @@
             android:textSize="@dimen/dimens16sp"
             android:layout_marginEnd="@dimen/dimens40dp"
             android:fontFamily="@font/inter"
-            android:textColor="@color/blue_text"/>
+            android:textColor="@color/blue_text"
+            android:layout_gravity="center"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/sun"
             android:layout_marginEnd="@dimen/dimens40dp"
-            android:contentDescription="@string/sun" />
+            android:contentDescription="@string/sun"
+            android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,14 +92,16 @@
             android:layout_marginEnd="@dimen/dimens40dp"
             android:fontFamily="@font/inter"
             android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:layout_gravity="center"/>
 
         <ImageView
             android:layout_width="@dimen/dimens27dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/dimens8dp"
             android:contentDescription="@string/drop"
-            android:src="@drawable/fluent_drop_16_filled" />
+            android:src="@drawable/fluent_drop_16_filled"
+            android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,7 +109,16 @@
             android:fontFamily="@font/inter"
             android:text="@string/humidity_for_every_hours"
             android:textColor="@color/black"
-            android:textSize="@dimen/dimens20sp" />
+            android:textSize="@dimen/dimens20sp"
+            android:layout_gravity="center"/>
+
+        <ImageView
+            android:id="@+id/arrow_cardView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/dimens10dp"/>
 
 
     </LinearLayout>
@@ -121,6 +134,7 @@
         app:cardElevation="@dimen/dimens24dp"
         app:cardCornerRadius="@dimen/dimens10dp"
         android:background="@color/black">
+
         <TextView
             android:id="@+id/today_cardPerceived"
             android:layout_width="wrap_content"
