implemented code to hide or show cardview pushing the arrow image

--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -125,6 +125,7 @@
 
     <!--card-->
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView_tomorrow"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimens213dp"
         android:layout_marginVertical="@dimen/dimens24dp"
